--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,88 +16,80 @@
 
  */
 
- @import url(https://fonts.googleapis.com/css?family=Raleway);
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 
- body {
-  //  margin-top: 100px;
-   background-color: #FCFCFC;
- }
+body {
+ background-color: #fcfcfc;
+}
 
- .notice {
-   background-color: #C6DCF0;
-   padding-left: 10px;
-   line-height: 40px;
-   margin-bottom: 0px;
-   margin-top: 104px;
- }
+.notice {
+ background-color: #c6dcf0;
+ padding-left: 10px;
+ line-height: 40px;
+ margin-bottom: 0;
+ margin-top: 104px;
+}
 
- .alert {
-   background-color: #C6DCF0;
-   padding-left: 10px;
-   line-height: 40px;
-   margin-bottom: 0px;
-  //  margin-top: 104px;
- }
+.alert {
+ background-color: #c6dcf0;
+ line-height: 40px;
+ margin-bottom: 0;
+ padding-left: 10px;
+}
 
- .top-bar {
-   margin: 0px;
-   padding: 10px;
-   background-color: #E1C9CF;
-   position: fixed;
-   top: 0px;
-   width: 100%;
-   z-index: 3;
- }
- /* Dropdown Button */
- .dropbtn {
-     padding-top: 16px;
-     padding-bottom: 16px;
-     font-size: 17px;
-     border: none;
-     cursor: pointer;
- }
- h1 {
-   margin-top: 44px;
- }
+.top-bar {
+ margin: 0;
+ padding: 10px;
+ background-color: #e1c9cf;
+ position: fixed;
+ top: 0;
+ width: 100%;
+ z-index: 3;
+}
+/* Dropdown Button */
+.dropbtn {
+   padding-top: 16px;
+   padding-bottom: 16px;
+   font-size: 17px;
+   border: none;
+   cursor: pointer;
+}
+h1 {
+  margin-top: 44px;
+}
 
- /* The container <div> - needed to position the dropdown content */
- .dropdown {
-    font-family: Raleway;
-     position: relative;
-     display: inline-block;
- }
+.dropdown {
+  font-family: Raleway;
+  position: relative;
+  display: inline-block;
+}
 
- /* Dropdown Content (Hidden by Default) */
- .dropdown-content {
+.dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   z-index: 2;
- }
+}
 
- /* Links inside the dropdown */
- .dropdown-content a {
-     color: black;
-     padding: 12px 16px;
-     text-decoration: none;
-     display: block;
- }
+.dropdown-content a {
+   color: black;
+   padding: 12px 16px;
+   text-decoration: none;
+   display: block;
+}
 
 .sub-content {
   background-color: #dcdcdc;
 }
 
- /* Change color of dropdown links on hover */
- .dropdown-content a:hover {background-color: #F5F5F5}
+.dropdown-content a:hover {background-color: #f5f5f5}
 
- /* Show the dropdown menu on hover */
- .dropdown:hover .dropdown-content {
-     display: block;
- }
+.dropdown:hover .dropdown-content {
+   display: block;
+}
 
- /* Change the background color of the dropdown button when the dropdown content is shown */
- .dropdown:hover .dropbtn {
-     background-color: #E1C9CF;
- }
+.dropdown:hover .dropbtn {
+   background-color: #e1c9cf;
+}
