--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,49 +19,50 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 
 body {
- background-color: #fcfcfc;
+  background-color: #fcfcfc;
 }
 
 .notice {
- background-color: #c6dcf0;
- padding-left: 10px;
- line-height: 40px;
- margin-bottom: 0;
- margin-top: 104px;
+  background-color: #c6dcf0;
+  padding-left: 10px;
+  line-height: 40px;
+  margin-bottom: 0;
+  margin-top: 104px;
 }
 
 .alert {
- background-color: #c6dcf0;
- line-height: 40px;
- margin-bottom: 0;
- padding-left: 10px;
+  background-color: #c6dcf0;
+  line-height: 40px;
+  margin-bottom: 0;
+  padding-left: 10px;
 }
 
 .top-bar {
- margin: 0;
- padding: 10px;
- background-color: #e1c9cf;
- position: fixed;
- top: 0;
- width: 100%;
- z-index: 3;
+  margin: 0;
+  padding: 10px;
+  background-color: #e1c9cf;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 3;
 }
-/* Dropdown Button */
+
 .dropbtn {
-   padding-top: 16px;
-   padding-bottom: 16px;
-   font-size: 17px;
-   border: none;
-   cursor: pointer;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  font-size: 17px;
+  border: 0;
+  cursor: pointer;
 }
+
 h1 {
   margin-top: 44px;
 }
 
 .dropdown {
+  display: inline-block;
   font-family: Raleway;
   position: relative;
-  display: inline-block;
 }
 
 .dropdown-content {
@@ -74,22 +75,22 @@ h1 {
 }
 
 .dropdown-content a {
-   color: black;
-   padding: 12px 16px;
-   text-decoration: none;
-   display: block;
+  color: black;
+  display: block;
+  padding: 12px 16px;
+  text-decoration: none;
 }
 
 .sub-content {
   background-color: #dcdcdc;
 }
 
-.dropdown-content a:hover {background-color: #f5f5f5}
+.dropdown-content a:hover { background-color: #f5f5f5; }
 
 .dropdown:hover .dropdown-content {
-   display: block;
+  display: block;
 }
 
 .dropdown:hover .dropbtn {
-   background-color: #e1c9cf;
+  background-color: #e1c9cf;
 }
