begins styling for new welcome page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,10 @@
-<body class="welcome container">
+<div class="welcome-container">
   <div class="home-notice">
     <p><%= notice %></p>
     <p><%= alert %></p>
   </div>
-<h1 class="greeting-header"><%= @greetings.sample %></h1>
+  <h1 class="greeting-header"><%= @greetings.sample %></h1>
+</div>
 <div class="recipe-demo">
   <div class="user-list">
     <% if user_signed_in? %>
@@ -22,4 +23,22 @@
     </ul>
     <% end %>
   </div>
+</div>
+<div class="site-directives">
+  <h3>With an account you can: </h3>
+  <ul>
+    <% @directives.each do |d| %>
+      <li> <%= d %> </li>
+    <% end %>
+  </ul>
+</div>
+<div class="demo-auto-play">
+  <h1> DEMO WILL AUTO PLAY HERE</h1>
+  <p> content </p>
+  <p> content </p>
+  <p> content </p>
+  <p> content </p>
+</div>
+<div class="home-footer">
+  <h1> some footer stuff and maybe a button to send user to the top of screen</h1>
 </div>
