--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 
 body {
-  background-color: #fcfcfc;
+  background-color: #F0F2F2;
 }
 
 .notice {
@@ -27,7 +27,7 @@ body {
   padding-left: 10px;
   line-height: 40px;
   margin-bottom: 0;
-  margin-top: 104px;
+  margin-top: 0;
 }
 
 .alert {
@@ -40,11 +40,16 @@ body {
 .top-bar {
   margin: 0;
   padding: 10px;
-  background-color: #e1c9cf;
+  background-color: #968888;
   position: fixed;
   top: 0;
+  opacity: 0.80;
   width: 100%;
   z-index: 3;
+}
+
+a {
+  color: #293038;
 }
 
 .dropbtn {
@@ -56,7 +61,7 @@ body {
 }
 
 h1 {
-  margin-top: 44px;
+  margin-top: 0;
 }
 
 .dropdown {
@@ -92,5 +97,5 @@ h1 {
 }
 
 .dropdown:hover .dropbtn {
-  background-color: #e1c9cf;
+  background-color: #968888;
 }
