--- a/app/assets/stylesheets/recipes/index.scss
+++ b/app/assets/stylesheets/recipes/index.scss
@@ -1,10 +1,10 @@
 h1 {
   text-align: center;
-  margin: 5%;
+  // margin: 5%;
   font-weight: 200;
   font-size: 65px;
-  border-top: 1px solid #000;
-  border-bottom: 1px solid #000;
+  // border-top: 1px solid #000;
+  // border-bottom: 1px solid #000;
 }
 
 .recipe-item {
