--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@ body {
   padding-left: 10px;
   line-height: 40px;
   margin-bottom: 0;
-  margin-top: 0;
+  margin-top: 53px;
 }
 
 .alert {
@@ -38,8 +38,10 @@ body {
 }
 
 .top-bar {
+  font-family: Raleway;
+  text-transform: uppercase;
   margin: 0;
-  padding: 10px;
+  padding: 15px;
   background-color: #968888;
   position: fixed;
   top: 0;
