--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,11 @@
     <p><%= alert %></p>
   </div> -->
   <div class="greeting">
-    <h1 class="greeting-header"><%= @greetings.sample %></h1>
+    <div class="row">
+      <div class="small-12 medium-12 large-12 columns">
+        <h1 class="greeting-header"><%= @greetings.sample %></h1>
+      </div>
+    </div>
   </div>
 </div>
 <div class="directive-container">
