attemps removal of whitespace on mobile

--- a/app/assets/stylesheets/welcome/index.scss
+++ b/app/assets/stylesheets/welcome/index.scss
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Italiana");
 
+.welcome {
+  width: 100%;
+  padding: 0;
+}
+
+.columns {
+  padding: 0;
+}
 .greeting {
   text-shadow: -1px 0 #000000, 0 2px #000000, 2px 0 #000000, 0 -1px #000000;
   // #344364;
