--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,54 +1,58 @@
-<div class="welcome-container">
-  <!-- <div class="home-notice">
-    <p><%= notice %></p>
-    <p><%= alert %></p>
-  </div> -->
-  <div class="greeting">
-    <div class="row">
-      <div class="small-12 medium-12 large-12 columns">
-        <h1 class="greeting-header"><%= @greetings.sample %></h1>
+<div class="welcome">
+  <div class="small-12 medium-12 large-12 columns">
+    <div class="welcome-container">
+      <!-- <div class="home-notice">
+        <p><%= notice %></p>
+        <p><%= alert %></p>
+      </div> -->
+      <div class="greeting">
+        <div class="row">
+          <div class="small-12 medium-12 large-12 columns">
+            <h1 class="greeting-header"><%= @greetings.sample %></h1>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-<div class="directive-container">
-  <% if !user_signed_in? %>
-    <h3>With an account you can: </h3>
-      <div class="list-container">
-        <ul>
-          <% @directives.each do |d| %>
-          <div class="site-directives">
-          <li><%= d %> </li>
-        </div>
+    <div class="directive-container">
+      <% if !user_signed_in? %>
+        <h3>With an account you can: </h3>
+          <div class="list-container">
+            <ul>
+              <% @directives.each do |d| %>
+              <div class="site-directives">
+              <li><%= d %> </li>
+            </div>
+              <% end %>
+            </ul>
+          </div>
+      <% end %>
+    </div>
+    <div class="recipe-demo">
+      <div class="user-list">
+        <% if user_signed_in? %>
+        <ul class="coler-me">
+          <% @recipes.each do |r| %>
+            <div class="recipe-item">
+              <p>
+                <h4><%= link_to r.name, recipe_path(r) %></h4>
+                <p class="description"><%= r.description %></p>
+                <div class="time">
+                  <p><%= r.hours%> hr | <%= r.minutes %> min</p>
+                </div>
+              </p>
+            </div>
           <% end %>
         </ul>
+        <% end %>
       </div>
-  <% end %>
-</div>
-<div class="recipe-demo">
-  <div class="user-list">
-    <% if user_signed_in? %>
-    <ul class="coler-me">
-      <% @recipes.each do |r| %>
-        <div class="recipe-item">
-          <p>
-            <h4><%= link_to r.name, recipe_path(r) %></h4>
-            <p class="description"><%= r.description %></p>
-            <div class="time">
-              <p><%= r.hours%> hr | <%= r.minutes %> min</p>
-            </div>
-          </p>
-        </div>
-      <% end %>
-    </ul>
-    <% end %>
-  </div>
-</div>
-<div class="demo-auto-play">
+    </div>
+    <div class="demo-auto-play">
 
-</div>
-<div class="home-footer">
-  <% if !user_signed_in? %>
-    <h4>Sign-up is easy and use of the application is completely free</h4>
-  <% end %>
+    </div>
+    <div class="home-footer">
+      <% if !user_signed_in? %>
+        <h4>Sign-up is easy and use of the application is completely free</h4>
+      <% end %>
+    </div>
+  </div>
 </div>
