updates home palette to colors from 'My Core Space'

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,7 +42,7 @@ body {
   text-transform: uppercase;
   margin: 0;
   padding: 15px;
-  background-color: #968888;
+  background-color: #E9E5D9;
   position: fixed;
   top: 0;
   opacity: 0.80;
